Replaced javax.xml.bind.DatatypeConverter with java.util.Base64